--- a/src/mlruns/0/149c4b6070544ba9bb5f1993edbc028e/meta.yaml
+++ b/src/mlruns/0/149c4b6070544ba9bb5f1993edbc028e/meta.yaml
@@ -4,7 +4,7 @@ entry_point_name: ''
 experiment_id: '0'
 lifecycle_stage: active
 run_id: 149c4b6070544ba9bb5f1993edbc028e
-run_name: classy-donkey-408
+run_name: run
 run_uuid: 149c4b6070544ba9bb5f1993edbc028e
 source_name: ''
 source_type: 4
